@@ -5,6 +5,7 @@
 # - added CMHtest
 # - added functions in loglin-utilities
 # - added logseries functions
+# - added seq_mosaic
 
 # we are a vcd extension; do we need to import gnm here?
 import(vcd)
@@ -28,7 +29,8 @@ export(
 	CMHtest,
 	conditional, joint, markov, mutual, saturated,
 	loglin2formula, loglin2string, seq_loglm,
-	dlogseries, plogseries, qlogseries, rlogseries
+	dlogseries, plogseries, qlogseries, rlogseries,
+	seq_mosaic
 	)
 
 # basic methods for glm & loglm objects
